--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -19,6 +19,7 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    padding-right: 3rem;
   }
   &__image {
     height: 100%;
