--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -36,6 +36,7 @@
     left: 0;
     z-index: 1500;
     opacity: 0;
+    visibility: hidden;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
@@ -88,6 +89,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+    visibility: visible;
   }
 
   &__icon {
